--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="@@CSS_ADDRESS" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello World</h1>
+    <script src="scripts/script.js"></script>
+  </body>
 </html>
